[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
gloo = "0.6"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
daisyui = { path = "../daisyui" }
heroicons = { path = "../hero_icons" }
