[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
gloo = "0"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0", features = ["serde", "wasmbind"] }
daisyui = { path = "../daisyui" }
hero_icons = { path = "../hero_icons" }
demo_components = {path = "../demo_components"}
wasm-bindgen = "0"
